# openscreen

./: .gitignore  DEVELOPMENT_GUIDELINES.md  electron-builder.json5  package.json
docs/engineering/: todo-linux-cursor-helper.md
electron/: electron-env.d.ts  main.ts  preload.ts  windows.ts
electron/ipc/: handlers.ts
electron/native-bridge/cursor/recording/: factory.ts  linuxNativeCursorRecordingSession.ts
electron/native/linux-cursor-helper/: CMakeLists.txt
electron/native/linux-cursor-helper/src/: main.cpp
scripts/: build-linux-cursor-helper.mjs  test-windows-wgc-helper.mjs
src/components/launch/: LaunchWindow.tsx
src/components/video-editor/: VideoEditor.tsx
src/components/video-editor/timeline/: TimelineEditor.tsx  zoomSuggestionUtils.test.ts  zoomSuggestionUtils.ts
